--- a/src/app.scss
+++ b/src/app.scss
@@ -5,5 +5,6 @@ $color-brand: $color-primary;
 @import "~taro-ui/dist/style/index.scss";
 @import "./public/css/base";
 
+@import "./public/css/animation";
 
 
