--- a/src/public/css/base.scss
+++ b/src/public/css/base.scss
@@ -22,6 +22,31 @@
 .bgBrand{background: $color-brand}
 .bgMajor{background: $color-major}
 
+.bg-gradual-orange {
+  background-image:linear-gradient(45deg, #ff9700, #ed1c24);
+  color:#fff;
+}
+.bg-gradual-red {
+  background-image:linear-gradient(45deg, #f43f3b, #ec008c);
+  color:#fff;
+}
+.bg-gradual-green {
+  background-image:linear-gradient(45deg, #39b54a, #8dc63f);
+  color:#fff;
+}
+.bg-gradual-blue {
+  background-image:linear-gradient(45deg, #0081ff, #1cbbb4);
+  color:#fff;
+}
+.bg-gradual-pink {
+  background-image:linear-gradient(45deg, #ec008c, #6739b6);
+  color:#fff;
+}
+
+
+
+
+
 
 /*字体大小*/
 .xl{font-size: $text-xl}
