--- a/src/app.scss
+++ b/src/app.scss
@@ -4,7 +4,7 @@ $color-brand: $color-primary;
 /* 引入 Taro UI 默认样式 */
 @import "~taro-ui/dist/style/index.scss";
 @import "./public/css/base";
-
+@import "./public/css/iconfont";
 @import "./public/css/animation";
 
 
