--- a/src/public/css/mixin.scss
+++ b/src/public/css/mixin.scss
@@ -8,10 +8,14 @@ $color-normal: #262626;
 $color-danger: #e33;
 $color-warn: #f85;
 $color-white: #fff;
+$color-black: #000;
 $color-red: #ff4949;
 $color-brand: #7A5330;
 $color-grey: #B0B0B0;
 $color-grey-darken: darken($color-grey, 5%);
+$color-blue: #1296db;
+$color-ec: #ECECEC;
+$color-orange:#F7B824;
 
 //******字体大小变量******/
 $text-xxl: 34px;
